--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <div class="logo">
                 <a href="https://laxpresspackers.in">
-                   <img src=".laxpresspackers.com/Logo.png" alt="Company Logo">
+                   <img src="laxpresspackers.com/Logo.png" alt="Company Logo">
                 </a>
             </div>
             <div class="company-info">
@@ -24,18 +24,18 @@
             
             <nav>
                 <ul class="navbar">
-                    <li class="hideOnMobile"><a href="../pages/index.html">Home</a></li>
-                    <li class="hideOnMobile"><a href="../pages/about.html">About Us</a></li>
-                    <li class="hideOnMobile"><a href="../pages/services.html">Services</a></li>
-                    <li class="hideOnMobile"><a href="../pages/contact.html">Contact Us</a></li>
+                    <li class="hideOnMobile"><a href="index.html">Home</a></li>
+                    <li class="hideOnMobile"><a href="about.html">About Us</a></li>
+                    <li class="hideOnMobile"><a href="services.html">Services</a></li>
+                    <li class="hideOnMobile"><a href="contact.html">Contact Us</a></li>
                     <li class="menu-button" onclick=showsidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a> </li>
                 </ul>
                 <ul class="sidebar">
                     <li onclick=hidesidebar()><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#5f6368"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
-                    <li><a href="../pages/index.html">Home</a></li>
-                    <li><a href="../pages/about.html">About Us</a></li>
-                    <li><a href="../pages/services.html">Services</a></li>
-                    <li><a href="../pages/contact.html">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="#" class="pay-now">Pay Now</a></li>
                    
                 </ul>
