--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 <!-- Call Toggle -->
 <div class="call-toggle">
   <a href="tel:+919535685166">
-    <img src="www.laxpresspackers.com/call.jpg" alt="Call Us">
+    <img src="laxpresspackers.com/call.jpg" alt="Call Us">
   </a>
 </div>
 
