--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@
        
                        </div><div class="card mt-2 p-3 text-center card-data">
                            <h3>Office Shifting</h3>
-                           <p>Minimize downtime with our efficient office shifting services. We handle packing, transportation, and setup with precision, ensuring a seamless transition for your business.
-
-                            Let me know if you need any modifications!</p>
+                           <p>Minimize downtime with our efficient office shifting services. We handle packing, transportation, and setup with precision, ensuring a seamless transition for your business.</p>
                            <!--<div class="row my-2">-->
                            <!--    <div class="col-6 crossed text-end">-->
                            <!--        <h4>₹ 3000</h4>-->
