--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <section class="quote-form">
               <div class="form-container">
                 <h2 class="form-title">Get Quote</h2>
-                <form class="quote-form" action="send_email.php" method="POST">
+                <form class="quote-form" action="https://formspree.io/f/xeooaqld" method="POST">
                   <label for="name">Name:</label>
                   <input type="text" id="name" name="name" placeholder="Enter your name" required>
                   
@@ -72,7 +72,7 @@
                     <option value="" disabled selected>Select an option</option>
                     <option value="Domestic-Moving">Household Moving</option>
                     <option value="Anniversary">Vehicle Moving</option>
-                    <option value="Baby Shower">Offive Moving</option>
+                    <option value="Baby Shower">Office Moving</option>
                     <option value="Welcome Baby">Storage service</option>
                     
                   </select>
