--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         <!-- Add header.html content here -->
     </header>
 
-    <div class="contact-container">
+    <div class="contact-container" action="https://formspree.io/f/xeooaqld" method=POST>
         <h1>Contact Us</h1>
         <div class="contact-info">
             <p><strong>📍 Address:</strong> 123, Main Street, Your City, Your Country</p>
