--- a/header.html
+++ b/header.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <div class="logo">
                 <a href="https://laxpresspackers.in">
-                   <img src="Logo.png" alt="Company Logo">
+                   <img src="Logo_70.webp" alt="Company Logo">
                 </a>
             </div>
             <div class="company-info">
