--- a/contact.html
+++ b/contact.html
@@ -89,12 +89,12 @@
     <div class="contact-container" action="https://formspree.io/f/xeooaqld" method=POST>
         <h1>Contact Us</h1>
         <div class="contact-info">
-            <p><strong>📍 Address:</strong> 123, Main Street, Your City, Your Country</p>
-            <p><strong>📞 Phone:</strong> +91 98765 43210</p>
+            <p><strong>📍 Address:</strong> 25, Rest House Cres road, Shanthala Nagar, Ashok Nagar, Bengaluru, Karnataka, 560001</p>
+            <p><strong>📞 Phone:</strong> +91 9991336161</p>
             <p><strong>📧 Email:</strong> info@laxpresspackers.com</p>
         </div>
         <h2>Get in Touch</h2>
-        <form class="contact-form">
+        <form class="contact-form" action="https://formspree.io/f/xeooaqld" method="POST">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <input type="text" name="subject" placeholder="Subject" required>
