--- a/about.html
+++ b/about.html
@@ -94,6 +94,6 @@
         <!-- Add footer.html content here -->
     </footer>
 
-    <script src="../assets/js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
