--- a/services.html
+++ b/services.html
@@ -108,6 +108,6 @@
         <!-- Add footer.html content here -->
     </footer>
 
-    <script src="../assets/js/scripts.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
