--- a/footer.html
+++ b/footer.html
@@ -19,8 +19,8 @@
                   <p class="text-justify">Laxpress Packers and Movers Pvt. Ltd. is committed to providing safe, efficient, and hassle-free relocation services. Whether you're moving your home, office, or vehicle, we ensure a smooth and secure experience with professional handling and timely delivery.</p>
                   <div class="ed_sociallink">
                   <ul>
-                    <li><a href="https://Facebookcom/laxpresspackers" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="https://YouTube.com/laxpresspackers" data-toggle="tooltip" data-placement="bottom" title="YouTube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.facebook.com/laxpresspackers" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="https://www.youtube.com/@laxpresspackers" data-toggle="tooltip" data-placement="bottom" title="YouTube"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
                     <li><a href="https://x.com/laxpresspackers" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="https://Instagram.com/laxpresspackers" data-toggle="tooltip" data-placement="bottom" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                     <li><a href="https://api.whatsapp.com/send?phone=919991336161&amp;text=Hiii" data-toggle="tooltip" data-placement="bottom" title="Whatsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
